infra/kubernetes/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboards-deployment
  labels:
    app: leaderboards
    tier: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leaderboards
      tier: container
  template:
    metadata:
      labels:
        app: leaderboards
        tier: container
    spec:
      imagePullSecrets:
        - name: github-image-pull-token
      containers:
        - name: leaderboards
          image: 'ghcr.io/lunatech-labs/lunatech-leaderboards:latest'
          ports:
            - containerPort: 8080
              name: http-web-svc
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
